Theme: fix anchor links hidden by navigation bar
Fix that when jumping to an anchor link (#foo) the actual highlighted
area gets hidden by the navigation bar.

--- a/source/_extensions/acacia_theme/static/acacia_theme.css
+++ b/source/_extensions/acacia_theme/static/acacia_theme.css
@@ -177,6 +177,10 @@ form.search {
     div.document {
         margin-top: calc(var(--mobile-nav-height) * 1.2);
     }
+    /* Make sure anchor links are not hidden by navbar when scrolled to */
+    :root {
+        scroll-padding-top: var(--mobile-nav-height);
+    }
     div.mobile-nav {
         position: fixed;
         z-index: 1;
